# Copyright 2022-2024 Bruce Merry
#
# This program is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
# more details.
#
# You should have received a copy of the GNU General Public License along
# with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "sunsniff"
version = "0.4.1"
edition = "2021"
authors = ["Bruce Merry"]
license = "GPL-3.0-or-later"
description = "Intercept and store telemetry from a Sunsynk inverter"
repository = "https://github.com/bmerry/sunsniff"

[profile.release]
strip = true
lto = true

[package.metadata.cross.build]
pre-build = [
    'set -e',
    'apt-get update && apt-get install -y flex bison dpkg-dev pkg-config libssl-dev',
    'dpkg --add-architecture $CROSS_DEB_ARCH',
    'apt-get update && apt-get install -y libssl-dev:$CROSS_DEB_ARCH',
    'cd /tmp',
    'curl https://www.tcpdump.org/release/libpcap-1.10.4.tar.gz | tar -zx',
    'cd libpcap-1.10.4',
    'arch="$(dpkg-architecture -A $CROSS_DEB_ARCH -q DEB_TARGET_GNU_TYPE)"',
    'if ! which ${arch}-gcc; then arch="$(./config.sub $arch)"; fi',
    './configure --host "$arch" --disable-shared LDFLAGS="-static"',
    'make',
    'make install'
]

[features]
default = ["influxdb2", "mqtt", "modbus", "pcap", "prometheus"]
mqtt = ["dep:mqtt-async-client", "dep:serde_json"]
prometheus = ["dep:prometheus-reqwest-remote-write", "dep:url", "dep:reqwest"]
modbus = ["dep:modbus-robust", "dep:serde_with", "dep:tokio-modbus", "dep:tokio-serial", "chrono/clock", "tokio/time"]
pcap = ["dep:chrono-tz", "dep:etherparse", "dep:pcap"]

[build-dependencies]
csv = "1.2.1"
phf_codegen = "0.11.3"
serde = { version = "1.0.217", features = ["derive"] }

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.85"
chrono = { version = "0.4.39", default-features = false, features = ["std"] }
chrono-tz = { version = "0.10.1", features = ["serde"], optional = true }
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.6"
etherparse = { version = "0.17.0", optional = true }
futures = "0.3.28"
influxdb2 = { version = "0.5.2", default-features = false, features = ["rustls"], optional = true }
log = "0.4.25"
modbus-robust = { version = "0.2.0", optional = true }
mqtt-async-client = { version = "0.3.1", optional = true }
pcap = { version = "2.2.0", features = ["capture-stream"], optional = true }
phf = { version = "0.11.3", default-features = false }
prometheus-reqwest-remote-write = { version = "0.2.1", optional = true}
reqwest = {version = '0.12.12', optional = true}
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.138", optional = true }
serde_with = { version = "3.12.0", optional = true }
tokio = { version = "1.43.0", features = ["macros", "rt"] }
tokio-modbus = { version = "0.16.1", default-features = false, features = ["rtu", "tcp"], optional = true }
tokio-serial = { version = "5.4.5", optional = true }
url = { version = "2.4.1", optional = true }
toml = "0.8.19"

[dev-dependencies]
assert_approx_eq = "1.1.0"
